<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:title="@string/navigation1"
            android:icon="@drawable/ic_home_black_24dp"
            android:checked="true" />

        <item android:id="@+id/nav_profil"
            android:title="@string/navigation2"
            android:icon="@drawable/ic_person_black_24dp" />

        <item android:id="@+id/nav_Consultants"
            android:title="@string/navigation3"
            android:icon="@drawable/ic_people_black_24dp" />

        <item android:id="@+id/nav_Contractors"
            android:title="@string/navigation4"
            android:icon="@drawable/ic_people_black_24dp" />

        <item android:id="@+id/nav_Suppliers"
            android:title="@string/navigation5"
            android:icon="@drawable/ic_build_black_24dp"/>
        <item
            android:id="@+id/nav_Massage"
            android:title="@string/navigation11"
            android:icon="@drawable/ic_mail_outline_black_24dp" />
        <item
            android:id="@+id/nav_notifications"
            android:title="@string/navigation6"
            android:icon="@drawable/ic_notifications_none_black_24dp"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/navigation9"
            android:icon="@drawable/ic_settings_black_24dp"/>


        <item android:id="@+id/nav_About"
            android:title="@string/navigation7"
            android:icon="@drawable/ic_about_black_24dp"/>

        <item android:id="@+id/nav_contanus"
            android:title="@string/navigation8"
            android:icon="@drawable/ic_call_to_action_black_24dp"/>


        <item android:id="@+id/nav_logout"
            android:title="@string/navigation10"
            android:icon="@drawable/ic_exit_to_app_black_24dp"/>


    </group>
</menu>